# Simple-Complex-RPG

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: documentation-request.md  test-request.md
.github/workflows/: cmake.yml  codeql.yml
DeiVoluntas/: CMakeLists.txt
DeiVoluntas/include/dei_voluntas/: scene.h
DeiVoluntas/include/dei_voluntas/data/: circle.h  line.h  quadtree.h  rect.h  shape.h  vec.h
DeiVoluntas/include/dei_voluntas/ecs/: component_array.h  component_manager.h  ecs_coordinator.h  ecs_types.h  entity_manager.h  system_manager.h
DeiVoluntas/include/dei_voluntas/graphics/: draw_system.h  drawable.h  sprite.h  texture.h
DeiVoluntas/include/dei_voluntas/physics/: b2_body_ptr.h  body.h  physical_properties.h  physics_system.h  rigid_body.h  transform.h  util.h
DeiVoluntas/include/dei_voluntas/physics/box2d/: box2d_physics_system.h
DeiVoluntas/include/dei_voluntas/physics/dei_voluntas/: dei_voluntas_physics_system.h  physical_properties.h  rigid_body.h  transform.h
DeiVoluntas/src/dei_voluntas/: scene.cpp
DeiVoluntas/src/dei_voluntas/data/: data.cpp  line.cpp  vec.cpp
DeiVoluntas/src/dei_voluntas/ecs/: component_array.cpp  component_manager.cpp  ecs_coordinator.cpp  entity_manager.cpp  system_manager.cpp
DeiVoluntas/src/dei_voluntas/graphics/: draw_system.cpp  drawable.cpp  sprite.cpp  texture.cpp
DeiVoluntas/src/dei_voluntas/physics/: b2_body_ptr.cpp  physical_properties.cpp  physics_system.cpp  rigid_body.cpp  transform.cpp
DeiVoluntas/src/dei_voluntas/physics/box2d/: box2d_physics_system.cpp
DeiVoluntas/src/dei_voluntas/physics/dei_voluntas/: dei_voluntas_physics_system.cpp  physical_properties.cpp  rigid_body.cpp  transform.cpp
SimpleComplexClient/: CMakeLists.txt
SimpleComplexClient/include/simple_complex_rpg/client/: client.h  client_data.h
SimpleComplexClient/src/: main.cpp
SimpleComplexClient/src/simple_complex_rpg/client/: client.cpp  client_data.cpp
SimpleComplexCommon/: CMakeLists.txt
SimpleComplexCommon/include/simple_complex_rpg/client/: iclient.h
SimpleComplexCommon/include/simple_complex_rpg/common/: command.h  command_handler.h  entity.h
SimpleComplexCommon/include/simple_complex_rpg/server/: entity.h  iserver.h  packet.h
SimpleComplexCommon/src/simple_complex_rpg/common/: command.cpp  command_handler.cpp  entity.cpp
SimpleComplexCommon/src/simple_complex_rpg/server/: entity.cpp  packet.cpp
SimpleComplexServer/: CMakeLists.txt
SimpleComplexServer/include/simple_complex_rpg/server/: client_session.h  server.h  server_config.h
SimpleComplexServer/src/: main.cpp
SimpleComplexServer/src/simple_complex_rpg/server/: client_session.cpp  server.cpp  server_config.cpp
docs/: ARCHITECTURE.md  ART_GUIDE.md  BUILDING.md  CODE_QUALITY.md  COLOR_PALETTES_GUIDELINE.md  CONTRIBUTING.md  DESIGN_GOALS.md  DOCUMENTATION.md  TESTING.md  UI_UX_GUIDE.md  VERSIONS.md
